--- a/vignettes/plinkQC.Rmd
+++ b/vignettes/plinkQC.Rmd
@@ -193,17 +193,24 @@ running the provided pre-trained classier are also needed from https://github.co
 
 Before use, the study data should be in the new hg38 annotation. USCS's [liftOver](https://genome.ucsc.edu/cgi-bin/hgLiftOver) tool
 may be needed to map variants from one annotation to another. More details on how
-to use the tool can be found on the processing [HapMap III reference data vignette](HapMap.Rmd).
-For this section, we provide an example dataset that is in hg38 annotation.
+to use the tool can be found on the processing [HapMap III reference data vignette](HapMap.Rmd). We provide an example dataset that is in the hg38 annotation. 
+
+Additional loading matrices are needed for the PCA projection used in the model.
+This is hosted on the plinkQC github repo under the inst/extdata folder located 
+[here](https://github.com/meyer-lab-cshl/plinkQC/tree/ancestry_update/inst/extdata/load_mat). Alternatively, the whole github repo can downloaded with
+```{bash installing github, eval=FALSE}
+git clone git@github.com:meyer-lab-cshl/plinkQC.git
+```
 
 In addition, the data should be in PLINK 2.0 format (i.e pgen, pvar, psam files), 
 and the variants identifiers should be formatted similar to the following example: 1:12345[hg38].
 We included the functions convert_to_plink2() and rename_variant_identifiers()
-to correctly format genomic data that is in the hg38 annotation. 
+to correctly format genomic data that is in the hg38 annotation. The name of the
+files (before the .acount or .eigenvec.allele) for the loading matrices must be included in the path2load_mat. 
 
 ``` {R, eval = FALSE}
 name = "data.hg38"
-path2load_mat = "path/to/load_mat/"
+path2load_mat = "path/to/load_mat/merged_chrs.postQC.train.pca"
 convert_to_plink2(indir=indir, qcdir=qcdir, name=name, 
                   path2plink2 = path2plink2)
 rename_variant_identifiers(indir=qcdir, qcdir=qcdir, name=name, 
@@ -220,7 +227,7 @@ ancestries <- superpop_classification(indir=qcdir, qcdir=qcdir, name=name,
 
 ```{r load ancestry, out.width = "500px", echo=FALSE}
 par(mfrow=c(2,1), las=1)
-#knitr::include_graphics("ancestry_plot.png")
+knitr::include_graphics("ancestral_prediction.pdf")
 ```
 
 \newpage
